Fix width and truncate search items

--- a/app/src/editor/canvas/components/ModuleSearch.pcss
+++ b/app/src/editor/canvas/components/ModuleSearch.pcss
@@ -3,6 +3,11 @@
   left: 32px;
   top: 10%;
   background: white;
+  min-width: 248px;
+  max-width: 248px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto 1fr;
   z-index: 12;
   border: 1px solid #EFEFEF;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.05);
